--- a/use/src/App.css
+++ b/use/src/App.css
@@ -23,6 +23,7 @@
   text-align: left;
   margin: 5% 0%;
   font-size: .8rem;
+  outline: none;
 }
 
 .FormGroup-Check {
@@ -47,7 +48,7 @@
 
 .Input:focus {
   background: none;
-  outline: none;
+  border: none;
 }
 
 .Input-textarea {
